tests/fixtures/nupm/rejected/unsupported-nuon-construct/nupm.nuon
{
    name: unsupported-nuon-construct
    type: module
    version: $bad
}
